(lang dune 3.0)

(name DoomMetal)
(authors "Tazouev Arbi & Guinet Virgile")
(maintainers "Tazouev Arbi")

(package
 (name DoomMetal)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune sdl2)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
